# mus-lang

./: LICENSE  README.md  pyproject.toml  run_mus.py  setup.py
mus/: __init__.py  builtins.py  evaluator.py  exceptions.py  executor.py  interpreter.py  lexer.py  parser.py  tokens.py  types.py
mus-vscode-plugin/: README.md  language-configuration.json  package.json  tsconfig.json
mus-vscode-plugin/snippets/: mus.code-snippets
mus-vscode-plugin/src/: extension.ts  server.ts
mus-vscode-plugin/syntaxes/: mus.tmLanguage.json
mus/core/: interpreter.py  lexer.py  parser.py  types.py
mus_language.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: 01_basic_syntax.mus  02_arrays.mus  03_functions_control.mus  04_oop.mus
