[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mus-lang"
version = "0.1.0"
description = "A modern object-oriented programming language"
requires-python = ">=3.10"
dependencies = [
    "dataclasses",
    "typing_extensions",
]

[tool.hatch.build.targets.wheel]
packages = ["mus"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310'] 